--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
                    <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Sign in</a>
                </li>
                <li class="nav-item">
-                   <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Regestration</a>
+                   <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Register</a>
                </li>
            </ul>
        </div>
@@ -45,7 +45,7 @@
            <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
                <div class="row justify-content-center">
                    <form class="col-7 text-center border border-light p-5">
-                       <p class="h4 mb-4">Regestration</p>
+                       <p class="h4 mb-4">Register</p>
 
                        <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
 
@@ -61,7 +61,7 @@
                        </div>
 
                        <div class="row justify-content-around">
-                           <button class="col-5 col-5 btn btn-info btn-block my-4" type="submit">Regestration</button>
+                           <button class="col-5 col-5 btn btn-info btn-block my-4" type="submit">Register</button>
                        </div>
                    </form>
                </div>
