--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,70 +1,11 @@
-<div class="container animated bounceInRight">
-        <div class="row justify-content-center">
-           <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-               <li class="nav-item">
-                   <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Sign in</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Register</a>
-               </li>
-           </ul>
-       </div>
-
-       <div class="tab-content" id="pills-tabContent">
-           <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-               <div class="row justify-content-center">
-                   <form class="col-7 text-center border border-light p-5">
-                       <p class="h4 mb-4">Sign in</p>
-
-                       <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
-
-                       <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
-
-                       <div class="d-flex justify-content-around">
-                           <div>
-                               <div class="custom-control custom-checkbox">
-                                   <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
-                                   <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
-                               </div>
-                           </div>
-                           <div>
-                               <a href="">Forgot password?</a>
-                           </div>
-                       </div>
-
-                       <div class="row justify-content-around">
-                           <button class="col-4 col-4 btn btn-info btn-block my-4" type="submit">Sign in</button>
-                       </div>
-                       <p>Not a member?
-                           <a href="#pills-profile-tab" aria-controls="pills-profile">Register</a>
-                       </p>
-                   </form>
-               </div>
-           </div>
-
-           <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-               <div class="row justify-content-center">
-                   <form class="col-7 text-center border border-light p-5">
-                       <p class="h4 mb-4">Register</p>
-
-                       <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
-
-                       <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
-
-                       <div class="d-flex justify-content-around">
-                           <div>
-                               <div class="custom-control custom-checkbox">
-                                   <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
-                                   <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
-                               </div>
-                           </div>
-                       </div>
-
-                       <div class="row justify-content-around">
-                           <button class="col-5 col-5 btn btn-info btn-block my-4" type="submit">Register</button>
-                       </div>
-                   </form>
-               </div>
-           </div>
-       </div>
- </div>
+<form (submit)="testBackend()" style="margin-top:10%; width: 40%; margin-left: 30%">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Username</label>
+    <input [(ngModel)]="username" name="username" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="usernameHelp" placeholder="Enter username">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input [(ngModel)]="password" name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
