--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form (submit)="testBackend()" style="margin-top:10%; width: 40%; margin-left: 30%">
+<form style="margin-top:10%; width: 40%; margin-left: 30%">
   <div class="form-group">
     <label for="exampleInputEmail1">Username</label>
     <input [(ngModel)]="username" name="username" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="usernameHelp" placeholder="Enter username">
@@ -7,5 +7,6 @@
     <label for="exampleInputPassword1">Password</label>
     <input [(ngModel)]="password" name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button (click)="registerUser()" class="btn btn-primary">Register</button>
+  <button (click)="loginUser()" class="btn btn-primary">Login</button>
 </form>
