--- a/frontend/src/app/components/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,20 @@
-<p>
-  dashboard works!
-</p>
+<div class="recs-wrapper">
+  <div class="recs-container" *ngFor="let post of posts">
+    <div class="rec-container" *ngIf="dataArrivalFlag != false">
+      <div class="card">
+        <div class="card-header">
+          <a (click)="onAdvisorRequested(post.advisor)">{{post.advisor}}</a>
+        </div>
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <p>{{post.body}}.</p>
+            <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+          </blockquote>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <button (click)="logout()" class="btn btn-primary">Logout</button>
