--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,174 +1,21 @@
-<!-- <div class="container animated bounceInRight">
-        <div class="row justify-content-center">
-           <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-               <li class="nav-item">
-                   <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Sign in</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Register</a>
-               </li>
-           </ul>
-       </div>
-       <div class="tab-content" id="pills-tabContent">
-           <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-               <div class="row justify-content-center">
-                   <form class="col-7 text-center border border-light p-5">
-                       <p class="h4 mb-4">Sign in</p>
-                       <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
-                       <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
-                       <div class="d-flex justify-content-around">
-                           <div>
-                               <div class="custom-control custom-checkbox">
-                                   <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
-                                   <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
-                               </div>
-                           </div>
-                           <div>
-                               <a href="">Forgot password?</a>
-                           </div>
-                       </div>
-                       <div class="row justify-content-around">
-                           <button class="col-4 col-4 btn btn-info btn-block my-4" type="submit">Sign in</button>
-                       </div>
-                       <p>Not a member?
-                           <a href="#pills-profile-tab" aria-controls="pills-profile">Register</a>
-                       </p>
-                   </form>
-               </div>
-           </div>
-           <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-               <div class="row justify-content-center">
-                   <form class="col-7 text-center border border-light p-5">
-                       <p class="h4 mb-4">Register</p>
-                       <input type="email" id="defaultLoginFormEmail" class="form-control mb-4" placeholder="E-mail">
-                       <input type="password" id="defaultLoginFormPassword" class="form-control mb-4" placeholder="Password">
-                       <div class="d-flex justify-content-around">
-                           <div>
-                               <div class="custom-control custom-checkbox">
-                                   <input type="checkbox" class="custom-control-input" id="defaultLoginFormRemember">
-                                   <label class="custom-control-label" for="defaultLoginFormRemember">Remember me</label>
-                               </div>
-                           </div>
-                       </div>
-                       <div class="row justify-content-around">
-                           <button class="col-5 col-5 btn btn-info btn-block my-4" type="submit">Register</button>
-                       </div>
-                   </form>
-               </div>
-           </div>
-       </div>
- </div> -->
-
-
-<div class="form">
-    <ul class="tab-group">
-        <li class="tab active"><a href="#signup">Sign Up</a></li>
-        <li class="tab"><a href="#login">Log In</a></li>
-    </ul>
-
-    <div class="tab-content">
-        <div id="signup">
-            <h1>Sign Up for Free</h1>
-
-            <form action="/" method="post">
-
-                <div class="top-row">
-                    <div class="field-wrap">
-                        <label>
-                            First Name<span class="req">*</span>
-                        </label>
-                        <input type="text" required autocomplete="off">
-                    </div>
-
-                    <div class="field-wrap">
-                        <label>
-                            Last Name<span class="req">*</span>
-                        </label>
-                        <input type="text" required autocomplete="off">
-                    </div>
-                </div>
-
-                <div class="field-wrap">
-                    <label>
-                        Email Address<span class="req">*</span>
-                    </label>
-                    <input type="email" required autocomplete="off">
-                </div>
-
-                <div class="field-wrap">
-                    <label>
-                        Set A Password<span class="req">*</span>
-                    </label>
-                    <input type="password" required autocomplete="off">
-                </div>
-
-                <button type="submit" class="button button-block">Get Started</button>
-            </form>
+<div class="container">
+<h1 class="form-heading">login Form</h1>
+<div class="login-form">
+<div class="main-div">
+    <div class="panel">
+   <h2>Binge Later</h2>
+   <p>Please enter your username and password</p>
+   </div>
+        <div class="form-group">
+            <input [(ngModel)]="username" type="email" class="form-control" id="inputUsername" placeholder="Username">
         </div>
-
-        <div id="login">
-            <h1>Welcome Back!</h1>
-
-            <form action="/" method="post">
-                <div class="field-wrap">
-                    <label>
-                        Email Address<span class="req">*</span>
-                    </label>
-                    <input type="email" required autocomplete="off">
-                </div>
-
-                <div class="field-wrap">
-                    <label>
-                        Password<span class="req">*</span>
-                    </label>
-                    <input type="password" required autocomplete="off">
-                </div>
-
-                <p class="forgot"><a href="#">Forgot Password?</a></p>
-
-                <button class="button button-block">Log In</button>
-
-            </form>
-
+        <div class="form-group">
+            <input [(ngModel)]="password" type="password" class="form-control" id="inputPassword" placeholder="Password">
         </div>
-
-    </div><!-- tab-content -->
-
-</div> <!-- /form -->
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
-
-<script src="text/javascript">
-    // $('.form').find('input, textarea').on('keyup blur focus', function (e) {
-    //     var $this = $(this),
-    //         label = $this.prev('label');
-    //     if (e.type === 'keyup') {
-    //         if ($this.val() === '') {
-    //             label.removeClass('active highlight');
-    //         } else {
-    //             label.addClass('active highlight');
-    //         }
-    //     } else if (e.type === 'blur') {
-    //         if ($this.val() === '') {
-    //             label.removeClass('active highlight');
-    //         } else {
-    //             label.removeClass('highlight');
-    //         }
-    //     } else if (e.type === 'focus') {
-    //         if ($this.val() === '') {
-    //             label.removeClass('highlight');
-    //         }
-    //         else if ($this.val() !== '') {
-    //             label.addClass('highlight');
-    //         }
-    //     }
-    // });
-    // $('.tab a').on('click', function (e) {
-    //     e.preventDefault();
-    //     $(this).parent().addClass('active');
-    //     $(this).parent().siblings().removeClass('active');
-    //     const target = $(this).attr('href');
-    //     $('.tab-content > div').not(target).hide();
-    //     $(target).fadeIn(600);
-    // });
-</script>
+        <div class="forgot">
+        <a href="reset.html">Forgot password?</a>
+</div>
+        <button (click)="loginUser()" type="submit" class="btn btn-primary">Login</button>
+    </div>
+<p class="botto-text"> Designed by Sunil Rajput</p>
+</div></div>
