--- a/frontend/src/app/components/dashboard/dashboard.component.css
+++ b/frontend/src/app/components/dashboard/dashboard.component.css
@@ -1,3 +1,38 @@
 .recs-wrapper{
   margin-top:10%;
+  width:50%;
+  margin-left:25%;
+}
+
+.rec-container{
+  background:white;
+}
+
+.btn-danger {
+  float:right;
+  font-family: Raleway-SemiBold;
+  font-size: 13px;
+  color: rgba(217, 83, 78, 0.75);
+  letter-spacing: 1px;
+  line-height: 15px;
+  border: 2px solid rgba(217, 83, 78, 0.75);
+  border-radius: 40px;
+  background: transparent;
+  transition: all 0.3s ease 0s;
+}
+
+.btn-danger:hover {
+  color: #FFF;
+  background: rgba(217, 83, 78, 0.75);
+  border: 2px solid rgba(217, 83, 78, 0.75);
+}
+
+h1 {
+  margin-top:80px;
+  font-weight: bold;
+}
+
+p {
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
