--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body{
   background: #6d29a0;
+  margin:0;
+  padding:0;
 }
